added header; included bullshit files because why not

--- a/hw1.tex
+++ b/hw1.tex
@@ -40,6 +40,16 @@
 
 \sloppy
 
+\noindent Group members: Matt Demusz, Frank Porco, Joyce Wang
+
+\vspace{0.1in}
+
+\begin{center}
+due 02/18/14
+\end{center}
+
+\vspace{0.1in}
+
 \noindent \underline{CS 344: DESIGN AND ANALYSIS OF COMPUTER
   ALGORITHMS \hspace{1.6in} SPRING 2014}
 
