--- a/hw1.tex
+++ b/hw1.tex
@@ -274,6 +274,57 @@ $\mathcal{H}$.\\
 from 0 to 36. The second is the residues of these numbers modulo 5;
 the third column is the residues modulo 7.\\
 
+\begin {tabular}{l || c | r}
+\# & \%5 & \%7 \\ \hline
+0 & 0 & 0 \\ \hline
+1 & 1 & 1 \\ \hline
+2 & 2 & 2 \\ \hline
+3 & 3 & 3 \\ \hline
+4 & 4 & 4 \\ \hline
+5 & 0 & 5 \\ \hline
+6 & 1 & 6 \\ \hline
+7 & 2 & 0 \\ \hline
+8 & 3 & 1 \\ \hline
+9 & 4 & 2 \\ \hline
+10 & 0 & 3 \\ \hline
+11 & 1 & 4 \\ \hline
+12 & 2 & 5 \\ \hline
+\end{tabular}
+\hspace{0.2in}
+\begin{tabular}{l || c | r}
+\# & \%5 & \%7 \\ \hline
+13 & 3 & 6 \\ \hline
+14 & 4 & 0 \\ \hline
+15 & 0 & 1 \\ \hline
+16 & 1 & 2 \\ \hline
+17 & 2 & 3 \\ \hline
+18 & 3 & 4 \\ \hline
+19 & 4 & 5 \\ \hline
+20 & 0 & 6 \\ \hline
+21 & 1 & 0 \\ \hline
+22 & 2 & 1 \\ \hline
+23 & 3 & 2 \\ \hline
+34 & 4 & 3 \\ \hline
+\\
+\end{tabular}
+\hspace{0.2in}
+\begin{tabular}{l || c | r}
+\# & \%5 & \%7 \\ \hline
+35 & 0 & 4 \\ \hline
+36 & 1 & 5 \\ \hline
+37 & 2 & 6 \\ \hline
+38 & 3 & 0 \\ \hline
+39 & 4 & 1 \\ \hline
+30 & 0 & 2 \\ \hline
+31 & 1 & 3 \\ \hline
+32 & 2 & 4 \\ \hline
+33 & 3 & 5 \\ \hline
+34 & 4 & 6 \\ \hline
+35 & 0 & 0 \\ \hline
+36 & 1 & 1 \\ \hline
+\\
+\end{tabular}
+
 \noindent B. Consider two different prime numbers $x$ and $y$. Show that the
 following is true: for every pair of numbers $m$ and $n$ so that: $0
 \leq m < x$ and $0 \leq n < y$, there is a unique integer $q$, where
