--- a/hw1.tex
+++ b/hw1.tex
@@ -330,10 +330,8 @@ checked their public keys in the directory. This is what Mallory got:
 \noindent Finally, Mallory recovered the original message. How did
 Mallory do this? What is the original message?\\
 
-\noindent [Hint: Consider how the three transmitted messages are
-  computed. The result of the previous problem 8 is useful here. Be
-  careful with the details and under which conditions you apply
-  certain expressions.]\\
+\noindent {\bf :} Compute the asymptotic running time of the
+above algorithm as a function of its input parameter, given:
 
 \end{document}
 
