--- a/hw1.tex
+++ b/hw1.tex
@@ -68,7 +68,7 @@ $f(n) = \sqrt{2^{7n}} = 2^{7n/2}$ and $g(n)$ = $2n lg(7)$. $f(n)$ is an exponent
 
 \item $f(n) = 2^{nln(n)},\ g(n) = n!$
 
-Since $g(n) = n!$, we can use Stirling's approximation: $ln(n!) = n ln(n) - n + O(ln n)$. To get it in the same form as Stirling's we take $ln$
+Since $g(n) = n!$, we can use Stirling's approximation: $ln(n!) = n ln(n) - n + O(ln n)$. To get it in the same form as Stirling's we take $ln$ of $f(n)$ and $ln$ of $g(n)$
 Stirling's approximation states that $ln(n!) = n ln(n) - n + O(ln n)$. Taking
 the natural logarithm of $f(n)$, we have
 \begin{eqnarray*}
