--- a/hw1.tex
+++ b/hw1.tex
@@ -381,8 +381,8 @@ checked their public keys in the directory. This is what Mallory got:
 \noindent Finally, Mallory recovered the original message. How did
 Mallory do this? What is the original message?\\
 
-\noindent {\bf :} Compute the asymptotic running time of the
-above algorithm as a function of its input parameter, given:
+\noindent {\bf How Malory did it:} Malory could have used a combination of
+the chinese remainder theorem and Gauss's algorithm:
 
 \end{document}
 
