--- a/hw1.tex
+++ b/hw1.tex
@@ -156,7 +156,7 @@ then show how the overall running time emerges.\\
 
 1. $O(n)$: from notes\\
 \indent 2. $O(1)$: check the last bit\\
-\indent 3. $O(n)$: worst case is having to flip 1s down the entire number\\
+\indent 3. $O(n)$: worst case for addition is having to flip 1s through the entire number\\
 \indent 4. $O(n^2)$\\
 \indent 5. $O(n)$: for loop runs linearly; everything inside gets multiplied by n\\
 \indent 6. $O(n^3)$: Euclid's algorithm from notes\\
