--- a/hw1.tex
+++ b/hw1.tex
@@ -487,7 +487,7 @@ $x^{3} = 74088$\\
 $x = 42$\\
 
 \noindent Malory, knowing the encrypted messages and the respective public keys could have
-applied Gauss's theorem like this and have come up with the original message (x), which was 42.
+applied Gauss's theorem like this and have come up with the original message (x), which is 42.
 
 \end{document}
 
