adding some updates to 2 before you meet with others

--- a/hw1.tex
+++ b/hw1.tex
@@ -183,13 +183,13 @@ then show how the overall running time emerges.\\
 1. $O(n)$: from notes\\
 \indent 2. $O(1)$: check the last bit\\
 \indent 3. $O(n)$: worst case for addition is having to flip 1s through the entire number\\
-\indent 4. $O(n^2)$\\
+\indent 4. $O(n^2)$: from notes\\
 \indent 5. $O(n)$: for loop runs linearly; everything inside gets multiplied by n\\
 \indent 6. $O(n^3)$: Euclid's algorithm from notes\\
 \indent 7. $O(1)$: returning a boolean doesn't depend on input size\\
-\indent 8. $O(n)$\\
+\indent 8. $O(n)$: N-1 is even (because of 3), so you have a 0, drop it in decomp\\
 \indent 9. $O(n^2)$: problem specifies multiplication (the "power x") as $O(n^2)$; number in front is dropped\\
-\indent 10. $O(n)$\\
+\indent 10. $O(n)$: for loop runs linearly\\
 \indent 11. $O(n^2)$: problem specifies multiplication (the "power 2") as $O(n^2)$\\
 \indent 12. $O(n)$:a mod b\\
 \indent 13. $O(n log^3n)$: primality test\\
