added I don't know

--- a/hw1.tex
+++ b/hw1.tex
@@ -103,7 +103,7 @@ for all $x\geq1$  $f(n)=\Theta(g)$.
 
 \item $f(n) = \frac{lgn^2}{n},\ g(n) = lg^*n$
 
-{\bfseries ANSWER: }
+{\bfseries ANSWER: } I don't know\\
 
 \item $f(n) = 2^n,\ g(n) = n^{lgn}$
 
@@ -305,7 +305,7 @@ Since the gcd(11, 1111) $\neq$ 1, there is no modulo multiplicative inverse of 1
   an efficient algorithm for finding all the inverses modulo $x^m$
   from the set $\{0, 1, \ldots, x^m-1\}$ that exist.\\
 
-{\bfseries ANSWER: }\\
+{\bfseries ANSWER: } I don't know\\
 \end{myitem}
 
 
@@ -368,7 +368,7 @@ $\mathcal{H}$.\\
   DPV chapter 1.5.2. How many random bits are needed here?\\
 \end{myitem}
 
-{\bfseries ANSWER: }
+{\bfseries ANSWER: }I don't know\\
 
 \newpage
 
@@ -426,7 +426,7 @@ $(n-1)! \neq -1 \pmod{n}$.
   rule? [Tip: Even if you are not able to answer the previous two
     questions, you should be able to argue about this question.]\\
 
-{\bfseries ANSWER: }
+{\bfseries ANSWER: }I don't know\\
 
 \end{itemize}
 
@@ -524,13 +524,13 @@ $$q = ( m \cdot y \cdot (y^{-1} \bmod{x}) + n \cdot x \cdot
   \cdot (y^{-1} \bmod{x})$ and $c_y = x \cdot (x^{-1} \bmod{y})$ and
 their values $\mod{x}$ and $\mod{y}$.]\\
 
-{\bfseries ANSWER: }\\
+{\bfseries ANSWER: } I don't know\\
 
 \noindent D. What happens in the case of three primes $x$, $y$ and $z$? Do the
 above properties still hold? If they do, how do they look like in this
 case?\\
 
-{\bfseries ANSWER: }\\
+{\bfseries ANSWER: }I don't know\\
 
 \noindent {\bf Problem 9:} There is an office, in which every member
 uses RSA to conduct secure communication with others.  For example,
