--- a/hw1.tex
+++ b/hw1.tex
@@ -92,13 +92,8 @@ $ln(f(n))$ is $O(nlnn)$, which grows faster than $ln(g(n))$ because it has more 
 
 \item $f(n) = lg(lg^*n),\  g(n) = lg^*(lgn)$
 
-Since $lg^*n = 1+lg(lgn)$ if $n>1$, $f(n)=lg(lg^*n)=lg(1+lg(lgn))$ and $g(n)=lg^*(lgn)=1+lg(lg(lgn))$. Let $x=lg(lgn)$. Then, $f(n)=lg(1+x)$ and $g(n)=1+lg(x)$. As the limit of x approaches infinity, $lg(1+x)-lg(x)=0$, so $lg(1+x)-lg(x)=0=1$.
-\begin{eqnarray*}
-	\frac{f(n)}{g(n)} = \frac{lg(1+x)}{1+lg(x)} \leq lg2
-	\\\\
-	\frac{g(n)}{f(n)} = \frac{1+lg(x)}{lg(1+x)} \leq 2
-\end{eqnarray*}
-for all $x\geq1$  $f(n)=\Theta(g)$.
+We know that $lg^*(lgn)=1+lg^*(lgn)$, so $lg^*(lgn)=lg^*(lgn)-1$. Therefore, we have $\frac{f(n)}{g(n)}= \frac{lg^*(lgn)}{lg^*(lgn)-1}$. We can let $x=lg^*(n)$, giving us $\frac{lg(x)}{x-1}$. As x goes to infinity, $g(n)$ grows a lot faster than $g(n)$ does, so $f(n) = O(g)$.
+
 
 
 \item $f(n) = \frac{lgn^2}{n},\ g(n) = lg^*n$
@@ -109,11 +104,11 @@ To compare the two functions and to keep them consistent, we can take the $lg$ o
 
 \item $f(n) = 2^{\sqrt{lgn}},\ g(n) = n(lgn)^3$
 
-To compare the two funcitons and to keep them consistent, we can take the $lg$ of both of them. Therefore, we have $lg(f(n))=lg(2^{\sqrt{lgn}})=\sqrt{lgn}lg(2)$ and $lg(g(n))=lg(n(lgn)^3)=3lg(n(lgn))$. 
+To compare the two functions and to keep them consistent, we can take the $lg$ of both of them. Therefore, we have $lg(f(n))=lg(2^{\sqrt{lgn}})=\sqrt{lgn}lg(2)$ and $lg(g(n))=lg(n(lgn)^3)=3lg(n(lgn))$. When comparing $\sqrt{lgn}lg(2)$ to $3lg(n(lgn))$, we can divide out the constant from $f(n)$ to $g(n)$, giving us $\sqrt{lgn}$ to compare to $\frac{3}{lg(2)}lg(n(lgn))$. We can see that $f(n)$ grows faster than $g(n)$, so $f(n)$ = $\Omega(g)$.
 
 \item $f(n) = e^{cos(n)},\ g(n) = lgn$
 
-To compare the two funcitons and to keep them consistent, we can take the $lg$ of both of them. Therefore, we have $ln(f(n)) = ln(e^{cos(n)}) = cos(n)$ and $ln(g(n)) = ln(lgn)$. The cosine curve ranges from -1 to 1 and is infinitely repetitive. 
+To compare the two funcitons and to keep them consistent, we can take the $lg$ of both of them. Therefore, we have $ln(f(n)) = ln(e^{cos(n)}) = cos(n)$ and $ln(g(n)) = ln(lgn)$. Although $(g(n))$ grows slowly, it will eventually exceed 1 and go to infinity, and the graph of cosine ranges from -1 to 1, so $(g(n))$ grows faster, which means that $f(n)$ = $O(g)$.
 
 \item $f(n) = lgn^2,\ g(n) = (lgn)^2$
 
@@ -236,7 +231,7 @@ $$x^y = \left\{
     x \cdot (x^{\lfloor \frac{y}{2} \rfloor} )^2, & \textrm{ if y is odd}
 \end{array}\right.$$
 
-Since we're computing the result according to the rule above, we need to calculate the run time of the rule. We are given that $x$ is in the order of $2^m$ (m+1 bits) and $y$ is in the order of $2^n$ (n+1 bits) as our input. The recursion ends after $n+1$ calls since at each recursive step, $y$ is halved, so the number of bits for y is decreased by 1. Then, in every call, we have a right shift, finding the last bit, a left shift, and sometimes addition, which gives us $O(n)$ bit operations. Therefore, the total running time is $(n+1)*(m+1)$, which gives us $O(nm)$ as the run time.\\
+Since we're computing the result according to the rule above, we need to calculate the run time of the rule. We are given that $x$ is in the order of $2^m$ (m+1 bits) and $y$ is in the order of $2^n$ (n+1 bits) as our input. The recursion ends after $n+1$ (number of bits) calls since at each recursive step, $y$ is halved, so the number of bits for y is decreased by 1. Then, in every call, we have a right shift, finding the last bit, a left shift, and sometimes addition, which gives us $O(m)$ bit operations. Therefore, the total running time is $(n+1)*(m+1) = nm+n+m+1$, which gives us $O(nm)$ as the run time.\\
 \end{myitem}
 
 \noindent {\bf Problem 4:}
@@ -245,11 +240,10 @@ Since we're computing the result according to the rule above, we need to calcula
 
 $2^{902}$ mod 7 => $(2^{3})^{300}2^{2}$ mod 7 => $(8)^{300}2^{2}$ mod 7
 => $(7+1)^{300}2^{2}$ mod 7\\
-From here we can use:  $(a+b)^{3} = a^{3} + 3a^{2}b + 3ab^{2} + b^{3}$ to get:\\
+From here we can use:  $(a+b)^{3} = a^{3} + 3a^{2}b + 3ab^{2} + b^{3}$ because we can see that the first three terms are divisible by a. Doing that, we get:\\
 $(7+1)^{300} = 7^{300} + 3(7)^{200}(1) + 3(7)(1)^{200} + (1)^{300}$\\
 The first three terms of this are divisible by 7, so they can be canceled out.
-This leaves us with $1^{300}2^{2}$ mod 7 => 4 mod 7 => 4\\
-$$2^{902} mod 7 = 4$$\\
+This leaves us with $1^{300}2^{2}$ mod 7 => 4 mod 7 => 4. Therefore, $2^{902} mod 7 = 4$.\\
 
 \item Find the modulo multiplicative inverse of 11 mod 120, 13 mod 45,
   35 mod 77, 9 mod 11, 11 mod 1111.\\
